--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,19 @@
+
+h2 {
+  font-style: italic;
+}
+
+p {
+  font-weight: 600;
+}
+
 .main__display-items-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.main__api-content-container {
   border: solid 2px #000;
-  padding: 30px;
+  padding: 10px;
 }
